# HRSauron

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/api/endpoints/: __init__.py  main_router.py  review.py
app/config/: __init__.py  ai.py  config.py  github.py
app/enums/: __init__.py  candidate_level.py  prompt.py
app/schemas/: ai.py
app/services/: ai.py  github.py
